# skills-sync

./: PUBLISH.md  README.md  pyproject.toml  requirements.txt
src/agents_sync/: cli.py  config.py  core.py  mcp.py  platforms.py
src/skills_sync/: __init__.py  cli.py  core.py  platforms.py
