[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/skills_sync"]
sources = ["src"]

[project]
name = "skills-sync"
version = "0.1.0"
description = "A simple CLI tool for syncing agent skills across platforms"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "inquirer>=3.1.0",
]

[project.scripts]
skills = "skills_sync.cli:main"
skills-sync = "skills_sync.cli:main"