[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/agents_sync"]
sources = ["src"]

[project]
name = "agents-sync"
version = "0.2.0"
description = "A simple CLI tool for syncing agent skills and MCP servers across platforms"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "inquirer>=3.1.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli_w>=1.0.0",
]

[project.scripts]
agents = "agents_sync.cli:main"
agents-sync = "agents_sync.cli:main"
skills = "agents_sync.cli:main"
skills-sync = "agents_sync.cli:main"